@@ -291,6 +291,7 @@ enum
    WXMENU_COMPOSE_SEP3,
    WXMENU_COMPOSE_EXTEDIT,
    WXMENU_COMPOSE_SEP4,
+   WXMENU_COMPOSE_IN_REPLY_TO,
    WXMENU_COMPOSE_CUSTOM_HEADERS,
    WXMENU_COMPOSE_END = WXMENU_COMPOSE_CUSTOM_HEADERS,
 
